meja/tests/typedecl_param-fail.stderr
File "tests/typedecl_param-fail.meja", line 1, characters 7-10:
Error: Syntax error: Expected a type parameter, but got int.
