meja/tests/typedecl_param-fail.meja
type t(int, 'a) = 'a;
